
   * "Builder" wizard, tied into the fragments subsystem.

   * Protein side-chain rotamer wizard.

   * "Tinker" wizard 

   * Real Edit Menu in Tk

Goals for 0.53 release

   * fill-out object/coord set specific settings

   * clean-up return conventions in cmd.py

   * complete first-round test-cases

   * feedback conditionals placed around all error output
   
Goals for 0.52 release:

   * provide accurate documentation

Changes up to 0.53

   * fixed minor goof with cmd.dist retval in 0.52

Changes up to 0.52

   * many improvements to online help

   * fixed discrete objects created from PDB files

   * prevented deadlock condition with re-entrant API locks

   * fixed couple of logic-bugs in threading 

   * changed output format from mouse click to a valid selection

   * finished retrofit of the parser.
   
   * formal charge now read from MOL files -- need to consider full
     implementation of MOL file reading capability (incl stereo)

Changes up to 0.51

   * Tcl/Tk GUI now contains a save molecule option

   * Tcl/Tk GUI help improved 

   * performance/quality options in the display menu

   * sphere quality setting
       
   * depth_cue toggle setting (important for low-end PC hardware)
 
   * specular reflections

   * fog setting

Changes up to 0.50

   * can now "pick" C-alphas in the ribbon

   * can now "pick" atoms and bonds in the stick representation 

   * improved clipping plane control command "clip"

   * pym file extension support, for PyMOL-specific .py files

   * better windows NT compatibility

   * settings browser

   * view, view_get, view_set commands

   * Parser now contains a general shortcut handling module to
     further help in reducing typing

   * Slight tweak of the virtual trackball

   * Saving and restoring matrix, center, origin, zoom, clip

   * Internal program output no longer includes python's stderr
   
   * New thread management solution -- simple and stable -- plus 